fixes to spacing and ranks

--- a/src/app/progress/progress.scss
+++ b/src/app/progress/progress.scss
@@ -42,15 +42,22 @@
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-auto-rows: min-content;
     grid-gap: 15px;
-    padding: 15px;
+    padding: 5px;
     margin: 15px 0;
     width: 100%;
     border-right: 1px solid rgba(255, 255, 255, 0.5);
     &:last-child {
       border-right: none;
     }
+    &.ranks-for-character {
+      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+    }
     @include phone-portrait {
       max-width: none;
+      margin: 0;
+      &.ranks-for-character {
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+      }
     }
   }
 
